--- a/BOZ_App/public/css/app.css
+++ b/BOZ_App/public/css/app.css
@@ -593,6 +593,9 @@ select {
 .pointer-events-none {
   pointer-events: none;
 }
+.static {
+  position: static;
+}
 .fixed {
   position: fixed;
 }
@@ -601,6 +604,10 @@ select {
 }
 .relative {
   position: relative;
+}
+.sticky {
+  position: -webkit-sticky;
+  position: sticky;
 }
 .top-0 {
   top: 0px;
@@ -611,8 +618,8 @@ select {
 .left-10 {
   left: 2.5rem;
 }
-.left-28 {
-  left: 7rem;
+.-top-3 {
+  top: -0.75rem;
 }
 .right-4 {
   right: 1rem;
@@ -626,17 +633,11 @@ select {
 .right-0 {
   right: 0px;
 }
+.-top-12 {
+  top: -3rem;
+}
 .left-0 {
   left: 0px;
-}
-.left-14 {
-  left: 3.5rem;
-}
-.left-16 {
-  left: 4rem;
-}
-.left-20 {
-  left: 5rem;
 }
 .z-0 {
   z-index: 0;
@@ -687,9 +688,6 @@ select {
 }
 .mt-3 {
   margin-top: 0.75rem;
-}
-.-mt-32 {
-  margin-top: -8rem;
 }
 .mt-1 {
   margin-top: 0.25rem;
@@ -757,6 +755,9 @@ select {
 .mt-16 {
   margin-top: 4rem;
 }
+.mt-20 {
+  margin-top: 5rem;
+}
 .box-border {
   box-sizing: border-box;
 }
@@ -814,11 +815,11 @@ select {
 .w-full {
   width: 100%;
 }
-.w-10 {
-  width: 2.5rem;
-}
 .w-20 {
   width: 5rem;
+}
+.w-10 {
+  width: 2.5rem;
 }
 .w-8 {
   width: 2rem;
@@ -980,10 +981,6 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
-.border-fountain-blue {
-  --tw-border-opacity: 1;
-  border-color: rgb(97 196 173 / var(--tw-border-opacity));
-}
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
@@ -991,6 +988,10 @@ select {
 .border-indigo-400 {
   --tw-border-opacity: 1;
   border-color: rgb(129 140 248 / var(--tw-border-opacity));
+}
+.border-fountain-blue {
+  --tw-border-opacity: 1;
+  border-color: rgb(97 196 173 / var(--tw-border-opacity));
 }
 .bg-white {
   --tw-bg-opacity: 1;
@@ -1019,6 +1020,9 @@ select {
 .bg-indigo-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(238 242 255 / var(--tw-bg-opacity));
+}
+.bg-opacity-30 {
+  --tw-bg-opacity: 0.3;
 }
 .fill-current {
   fill: currentColor;
@@ -1069,17 +1073,9 @@ select {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
-.px-12 {
-  padding-left: 3rem;
-  padding-right: 3rem;
-}
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
-}
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
 }
 .pt-10 {
   padding-top: 2.5rem;
@@ -1223,6 +1219,10 @@ select {
   --tw-text-opacity: 1;
   color: rgb(67 56 202 / var(--tw-text-opacity));
 }
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
 .underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -1291,6 +1291,15 @@ select {
 .drop-shadow-lg {
   --tw-drop-shadow: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+.backdrop-blur-lg {
+  --tw-backdrop-blur: blur(16px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
+.backdrop-filter {
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 .transition {
   transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
@@ -1568,17 +1577,16 @@ select {
     position: static;
   }
 
-  .md\:sticky {
-    position: -webkit-sticky;
-    position: sticky;
+  .md\:left-20 {
+    left: 5rem;
   }
 
   .md\:top-0 {
     top: 0px;
   }
 
-  .md\:z-10 {
-    z-index: 10;
+  .md\:-mt-32 {
+    margin-top: -8rem;
   }
 
   .md\:mt-0 {
@@ -1593,12 +1601,12 @@ select {
     margin-left: 1.5rem;
   }
 
-  .md\:mb-2 {
-    margin-bottom: 0.5rem;
-  }
-
   .md\:mt-2 {
     margin-top: 0.5rem;
+  }
+
+  .md\:mb-2 {
+    margin-bottom: 0.5rem;
   }
 
   .md\:inline-block {
@@ -1625,6 +1633,10 @@ select {
     height: 50%;
   }
 
+  .md\:h-16 {
+    height: 4rem;
+  }
+
   .md\:h-20 {
     height: 5rem;
   }
@@ -1637,6 +1649,10 @@ select {
     height: 100%;
   }
 
+  .md\:w-5 {
+    width: 1.25rem;
+  }
+
   .md\:w-auto {
     width: auto;
   }
@@ -1647,10 +1663,6 @@ select {
 
   .md\:w-5\/6 {
     width: 83.333333%;
-  }
-
-  .md\:w-5 {
-    width: 1.25rem;
   }
 
   .md\:min-w-\[55\%\] {
@@ -1689,6 +1701,10 @@ select {
     gap: 6rem;
   }
 
+  .md\:rounded-2xl {
+    border-radius: 1rem;
+  }
+
   .md\:rounded-b-2xl {
     border-bottom-right-radius: 1rem;
     border-bottom-left-radius: 1rem;
@@ -1706,10 +1722,6 @@ select {
     border-left-width: 1px;
   }
 
-  .md\:border-b {
-    border-bottom-width: 1px;
-  }
-
   .md\:border-l-2 {
     border-left-width: 2px;
   }
@@ -1717,11 +1729,6 @@ select {
   .md\:border-black {
     --tw-border-opacity: 1;
     border-color: rgb(0 0 0 / var(--tw-border-opacity));
-  }
-
-  .md\:border-gray-200 {
-    --tw-border-opacity: 1;
-    border-color: rgb(229 231 235 / var(--tw-border-opacity));
   }
 
   .md\:bg-inherit {
@@ -1733,8 +1740,8 @@ select {
     background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   }
 
-  .md\:bg-opacity-30 {
-    --tw-bg-opacity: 0.3;
+  .md\:bg-none {
+    background-image: none;
   }
 
   .md\:py-1 {
@@ -1785,17 +1792,6 @@ select {
     filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
   }
 
-  .md\:backdrop-blur-lg {
-    --tw-backdrop-blur: blur(16px);
-    -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-            backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-  }
-
-  .md\:backdrop-filter {
-    -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-            backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-  }
-
   .md\:transition-all {
     transition-property: all;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1813,6 +1809,10 @@ select {
 }
 @media (min-width: 1024px) {
 
+  .lg\:left-28 {
+    left: 7rem;
+  }
+
   .lg\:mx-20 {
     margin-left: 5rem;
     margin-right: 5rem;
@@ -1823,16 +1823,16 @@ select {
     margin-right: auto;
   }
 
-  .lg\:mt-4 {
-    margin-top: 1rem;
+  .lg\:mt-0 {
+    margin-top: 0px;
   }
 
   .lg\:mb-0 {
     margin-bottom: 0px;
   }
 
-  .lg\:mt-0 {
-    margin-top: 0px;
+  .lg\:mt-4 {
+    margin-top: 1rem;
   }
 
   .lg\:h-128 {
@@ -1847,12 +1847,12 @@ select {
     height: 16.666667%;
   }
 
-  .lg\:h-60 {
-    height: 15rem;
-  }
-
   .lg\:w-container {
     width: 1140px;
+  }
+
+  .lg\:w-10 {
+    width: 2.5rem;
   }
 
   .lg\:w-full {
@@ -1861,10 +1861,6 @@ select {
 
   .lg\:w-3\/6 {
     width: 50%;
-  }
-
-  .lg\:w-10 {
-    width: 2.5rem;
   }
 
   .lg\:object-cover {
