--- a/BOZ_App/public/css/app.css
+++ b/BOZ_App/public/css/app.css
@@ -593,9 +593,6 @@ select {
 .pointer-events-none {
   pointer-events: none;
 }
-.static {
-  position: static;
-}
 .fixed {
   position: fixed;
 }
@@ -648,6 +645,9 @@ select {
 .z-50 {
   z-index: 50;
 }
+.m-0 {
+  margin: 0px;
+}
 .m-2 {
   margin: 0.5rem;
 }
@@ -656,9 +656,6 @@ select {
 }
 .m-4 {
   margin: 1rem;
-}
-.m-0 {
-  margin: 0px;
 }
 .mx-3 {
   margin-left: 0.75rem;
@@ -752,9 +749,6 @@ select {
 .mt-0 {
   margin-top: 0px;
 }
-.mt-16 {
-  margin-top: 4rem;
-}
 .mt-20 {
   margin-top: 5rem;
 }
@@ -803,8 +797,8 @@ select {
 .h-full {
   height: 100%;
 }
-.h-80 {
-  height: 20rem;
+.h-72 {
+  height: 18rem;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -969,6 +963,10 @@ select {
 .border-transparent {
   border-color: transparent;
 }
+.border-fountain-blue {
+  --tw-border-opacity: 1;
+  border-color: rgb(97 196 173 / var(--tw-border-opacity));
+}
 .border-pickled-bluewood {
   --tw-border-opacity: 1;
   border-color: rgb(47 72 88 / var(--tw-border-opacity));
@@ -988,10 +986,6 @@ select {
 .border-indigo-400 {
   --tw-border-opacity: 1;
   border-color: rgb(129 140 248 / var(--tw-border-opacity));
-}
-.border-fountain-blue {
-  --tw-border-opacity: 1;
-  border-color: rgb(97 196 173 / var(--tw-border-opacity));
 }
 .bg-white {
   --tw-bg-opacity: 1;
@@ -1016,6 +1010,10 @@ select {
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+.bg-tradewind {
+  --tw-bg-opacity: 1;
+  background-color: rgb(72 171 164 / var(--tw-bg-opacity));
 }
 .bg-indigo-50 {
   --tw-bg-opacity: 1;
@@ -1188,9 +1186,9 @@ select {
   --tw-text-opacity: 1;
   color: rgb(22 163 74 / var(--tw-text-opacity));
 }
-.text-fountain-blue {
+.text-black {
   --tw-text-opacity: 1;
-  color: rgb(97 196 173 / var(--tw-text-opacity));
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 .text-pickled-bluewood {
   --tw-text-opacity: 1;
@@ -1228,10 +1226,6 @@ select {
   --tw-text-opacity: 1;
   color: rgb(67 56 202 / var(--tw-text-opacity));
 }
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
 .underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -1248,6 +1242,12 @@ select {
 }
 .opacity-100 {
   opacity: 1;
+}
+.opacity-20 {
+  opacity: 0.2;
+}
+.opacity-50 {
+  opacity: 0.5;
 }
 .shadow-sm {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
@@ -1411,9 +1411,6 @@ select {
   --tw-scale-y: 1.5;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-.focus\:border-2:focus {
-  border-width: 2px;
-}
 .focus\:border-blue-300:focus {
   --tw-border-opacity: 1;
   border-color: rgb(147 197 253 / var(--tw-border-opacity));
@@ -1421,6 +1418,10 @@ select {
 .focus\:border-gray-900:focus {
   --tw-border-opacity: 1;
   border-color: rgb(17 24 39 / var(--tw-border-opacity));
+}
+.focus\:border-blue-600:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(37 99 235 / var(--tw-border-opacity));
 }
 .focus\:border-indigo-300:focus {
   --tw-border-opacity: 1;
@@ -1434,9 +1435,9 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
-.focus\:border-blue-600:focus {
-  --tw-border-opacity: 1;
-  border-color: rgb(37 99 235 / var(--tw-border-opacity));
+.focus\:bg-white:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 .focus\:bg-gray-100:focus {
   --tw-bg-opacity: 1;
@@ -1450,9 +1451,9 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
-.focus\:bg-white:focus {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+.focus\:text-gray-700:focus {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 .focus\:text-indigo-800:focus {
   --tw-text-opacity: 1;
@@ -1462,16 +1463,9 @@ select {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
 }
-.focus\:text-gray-700:focus {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
-}
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
-}
-.focus\:outline-2:focus {
-  outline-width: 2px;
 }
 .focus\:ring:focus {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
@@ -1484,11 +1478,6 @@ select {
 }
 .focus\:ring-opacity-50:focus {
   --tw-ring-opacity: 0.5;
-}
-.focus\:hover\:scale-150:hover:focus {
-  --tw-scale-x: 1.5;
-  --tw-scale-y: 1.5;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .active\:bg-gray-100:active {
   --tw-bg-opacity: 1;
@@ -1618,20 +1607,12 @@ select {
     left: 5rem;
   }
 
-  .md\:top-0 {
-    top: 0px;
-  }
-
-  .md\:top-2 {
-    top: 0.5rem;
-  }
-
-  .md\:top-4 {
-    top: 1rem;
-  }
-
   .md\:top-6 {
     top: 1.5rem;
+  }
+
+  .md\:top-0 {
+    top: 0px;
   }
 
   .md\:-mt-32 {
@@ -1656,6 +1637,14 @@ select {
 
   .md\:mb-2 {
     margin-bottom: 0.5rem;
+  }
+
+  .md\:-mt-24 {
+    margin-top: -6rem;
+  }
+
+  .md\:-mt-16 {
+    margin-top: -4rem;
   }
 
   .md\:inline-block {
@@ -1722,6 +1711,10 @@ select {
     list-style-type: none;
   }
 
+  .md\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -1746,8 +1739,8 @@ select {
     justify-content: center;
   }
 
-  .md\:gap-24 {
-    gap: 6rem;
+  .md\:gap-5 {
+    gap: 1.25rem;
   }
 
   .md\:rounded-2xl {
@@ -1787,10 +1780,6 @@ select {
   .md\:bg-white {
     --tw-bg-opacity: 1;
     background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-  }
-
-  .md\:bg-none {
-    background-image: none;
   }
 
   .md\:py-1 {
@@ -1872,6 +1861,16 @@ select {
     margin-right: auto;
   }
 
+  .lg\:mx-32 {
+    margin-left: 8rem;
+    margin-right: 8rem;
+  }
+
+  .lg\:mx-40 {
+    margin-left: 10rem;
+    margin-right: 10rem;
+  }
+
   .lg\:mt-0 {
     margin-top: 0px;
   }
@@ -1886,6 +1885,10 @@ select {
 
   .lg\:h-128 {
     height: 32rem;
+  }
+
+  .lg\:h-\[30rem\] {
+    height: 30rem;
   }
 
   .lg\:h-\[50rem\] {
