--- a/BOZ_App/public/css/app.css
+++ b/BOZ_App/public/css/app.css
@@ -752,6 +752,12 @@ select {
 .mt-20 {
   margin-top: 5rem;
 }
+.-mt-2 {
+  margin-top: -0.5rem;
+}
+.-mt-8 {
+  margin-top: -2rem;
+}
 .box-border {
   box-sizing: border-box;
 }
@@ -827,6 +833,9 @@ select {
 .w-48 {
   width: 12rem;
 }
+.w-40 {
+  width: 10rem;
+}
 .max-w-xl {
   max-width: 36rem;
 }
@@ -869,6 +878,9 @@ select {
 }
 .cursor-default {
   cursor: default;
+}
+.resize-none {
+  resize: none;
 }
 .list-inside {
   list-style-position: inside;
@@ -1019,6 +1031,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(238 242 255 / var(--tw-bg-opacity));
 }
+.bg-paradiso-light {
+  --tw-bg-opacity: 1;
+  background-color: rgb(58 145 151 / var(--tw-bg-opacity));
+}
 .bg-opacity-30 {
   --tw-bg-opacity: 0.3;
 }
@@ -1040,6 +1056,9 @@ select {
 }
 .p-6 {
   padding: 1.5rem;
+}
+.p-4 {
+  padding: 1rem;
 }
 .px-4 {
   padding-left: 1rem;
@@ -1135,6 +1154,10 @@ select {
   font-size: 1rem;
   line-height: 1.5rem;
 }
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
 .font-medium {
   font-weight: 500;
 }
@@ -1190,10 +1213,6 @@ select {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
-.text-pickled-bluewood {
-  --tw-text-opacity: 1;
-  color: rgb(47 72 88 / var(--tw-text-opacity));
-}
 .text-indigo-600 {
   --tw-text-opacity: 1;
   color: rgb(79 70 229 / var(--tw-text-opacity));
@@ -1234,20 +1253,14 @@ select {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-.opacity-75 {
-  opacity: 0.75;
+.opacity-50 {
+  opacity: 0.5;
 }
 .opacity-0 {
   opacity: 0;
 }
 .opacity-100 {
   opacity: 1;
-}
-.opacity-20 {
-  opacity: 0.2;
-}
-.opacity-50 {
-  opacity: 0.5;
 }
 .shadow-sm {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
@@ -1360,6 +1373,11 @@ select {
   --tw-scale-y: 1.5;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
+.hover\:scale-125:hover {
+  --tw-scale-x: 1.25;
+  --tw-scale-y: 1.25;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
 .hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
@@ -1379,6 +1397,10 @@ select {
 .hover\:bg-gray-50:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+.hover\:bg-paradiso-dark:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(52 120 134 / var(--tw-bg-opacity));
 }
 .hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
@@ -1619,6 +1641,10 @@ select {
     margin-top: -8rem;
   }
 
+  .md\:-mt-16 {
+    margin-top: -4rem;
+  }
+
   .md\:mt-0 {
     margin-top: 0px;
   }
@@ -1639,12 +1665,8 @@ select {
     margin-bottom: 0.5rem;
   }
 
-  .md\:-mt-24 {
-    margin-top: -6rem;
-  }
-
-  .md\:-mt-16 {
-    margin-top: -4rem;
+  .md\:mt-5 {
+    margin-top: 1.25rem;
   }
 
   .md\:inline-block {
@@ -1701,6 +1723,10 @@ select {
 
   .md\:w-5\/6 {
     width: 83.333333%;
+  }
+
+  .md\:w-48 {
+    width: 12rem;
   }
 
   .md\:min-w-\[55\%\] {
@@ -1859,11 +1885,6 @@ select {
   .lg\:mx-auto {
     margin-left: auto;
     margin-right: auto;
-  }
-
-  .lg\:mx-32 {
-    margin-left: 8rem;
-    margin-right: 8rem;
   }
 
   .lg\:mx-40 {
