--- a/BOZ_App/public/css/app.css
+++ b/BOZ_App/public/css/app.css
@@ -686,15 +686,6 @@ select {
 .bottom-14 {
   bottom: 3.5rem;
 }
-.right-2 {
-  right: 0.5rem;
-}
-.right-5 {
-  right: 1.25rem;
-}
-.right-8 {
-  right: 2rem;
-}
 .z-0 {
   z-index: 0;
 }
@@ -1018,6 +1009,9 @@ select {
 .gap-3 {
   gap: 0.75rem;
 }
+.self-start {
+  align-self: flex-start;
+}
 .overflow-auto {
   overflow: auto;
 }
@@ -1029,7 +1023,6 @@ select {
 }
 .rounded-md {
   border-radius: 0.375rem;
-    width:22rem;
 }
 .rounded {
   border-radius: 0.25rem;
@@ -1277,6 +1270,9 @@ select {
 }
 .pb-6 {
   padding-bottom: 1.5rem;
+}
+.pt-1 {
+  padding-top: 0.25rem;
 }
 .pt-6 {
   padding-top: 1.5rem;
@@ -1789,6 +1785,10 @@ select {
   }
 }
 @media (min-width: 640px) {
+
+  .sm\:ml-6 {
+    margin-left: 1.5rem;
+  }
 
   .sm\:ml-0 {
     margin-left: 0px;
